src/snapshots/openapi_to_rust__test_helpers__complex_nested.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct BetaListResponseMessageBatch {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub data: Option<Vec<MessageBatch>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub last_id: Option<String>,
}
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct MessageBatch {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub id: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub status: Option<MessageBatchStatus>,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum MessageBatchStatus {
    #[default]
    #[serde(rename = "pending")]
    Pending,
    #[serde(rename = "completed")]
    Completed,
    #[serde(rename = "failed")]
    Failed,
}
impl MessageBatchStatus {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Pending => "pending",
            Self::Completed => "completed",
            Self::Failed => "failed",
        }
    }
}
impl ::std::fmt::Display for MessageBatchStatus {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for MessageBatchStatus {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
