src/snapshots/openapi_to_rust__test_helpers__const_only_property.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ConstModifier {
    #[serde(rename = "someConstant", skip_serializing_if = "Option::is_none")]
    pub some_constant: Option<ConstModifierSomeConstant>,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ConstModifierSomeConstant {
    #[default]
    #[serde(rename = "TheOnlyValidValue")]
    TheOnlyValidValue,
}
impl ConstModifierSomeConstant {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::TheOnlyValidValue => "TheOnlyValidValue",
        }
    }
}
impl ::std::fmt::Display for ConstModifierSomeConstant {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for ConstModifierSomeConstant {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
