src/snapshots/openapi_to_rust__test_helpers__content_block_delta_union_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone)]
pub enum ContentBlockDelta {
    TextDelta(TextDelta),
    InputJsonDelta(InputJsonDelta),
}
impl serde::Serialize for ContentBlockDelta {
    fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: serde::Serializer,
    {
        match self {
            Self::TextDelta(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `", stringify!(TextDelta),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                object
                    .insert(
                        "type".to_string(),
                        serde_json::Value::String("text_delta".to_string()),
                    );
                value.serialize(serializer)
            }
            Self::InputJsonDelta(payload) => {
                let mut value = serde_json::to_value(payload)
                    .map_err(serde::ser::Error::custom)?;
                let object = value
                    .as_object_mut()
                    .ok_or_else(|| {
                        serde::ser::Error::custom(
                            concat!(
                                "discriminated union variant `", stringify!(InputJsonDelta),
                                "` did not serialize as an object",
                            ),
                        )
                    })?;
                object
                    .insert(
                        "type".to_string(),
                        serde_json::Value::String("input_json_delta".to_string()),
                    );
                value.serialize(serializer)
            }
        }
    }
}
impl<'de> serde::Deserialize<'de> for ContentBlockDelta {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        let value = serde_json::Value::deserialize(deserializer)?;
        let discriminator = value
            .get("type")
            .and_then(serde_json::Value::as_str)
            .ok_or_else(|| serde::de::Error::custom(
                concat!("missing string discriminator `", "type", "`",),
            ))?
            .to_string();
        match discriminator.as_str() {
            "text_delta" => {
                serde_json::from_value::<TextDelta>(value)
                    .map(Self::TextDelta)
                    .map_err(serde::de::Error::custom)
            }
            "input_json_delta" => {
                serde_json::from_value::<InputJsonDelta>(value)
                    .map(Self::InputJsonDelta)
                    .map_err(serde::de::Error::custom)
            }
            other => {
                Err(
                    serde::de::Error::custom(
                        format!(
                            "unknown discriminator value `{other}` for `{}`", "type",
                        ),
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct TextDelta {
    pub text: String,
    pub r#type: serde_json::Value,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct InputJsonDelta {
    pub partial_json: String,
    pub r#type: serde_json::Value,
}
