src/snapshots/openapi_to_rust__test_helpers__content_delta_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
/// Serde normally maps both a missing `Option<T>` field and an
/// explicit JSON null to `None`. Wrapping the decoded value in
/// `Some` retains the field-presence bit for `Option<Option<T>>`.
mod tri_state_serde {
    use serde::{Deserialize, Deserializer};
    pub fn deserialize<'de, D, T>(de: D) -> Result<Option<T>, D::Error>
    where
        D: Deserializer<'de>,
        T: Deserialize<'de>,
    {
        T::deserialize(de).map(Some)
    }
}
///Represents a streamed chunk of a chat completion response
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CreateChatCompletionStreamResponse {
    ///A list of chat completion choices
    pub choices: Vec<CreateChatCompletionStreamResponseChoicesItem>,
    ///The Unix timestamp (in seconds) of when the chat completion was created
    pub created: i64,
    ///A unique identifier for the chat completion
    pub id: String,
    ///The model to generate the completion
    pub model: String,
    ///The object type, which is always `chat.completion.chunk`
    pub object: CreateChatCompletionStreamResponseObject,
}
///The object type, which is always `chat.completion.chunk`
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum CreateChatCompletionStreamResponseObject {
    #[default]
    #[serde(rename = "chat.completion.chunk")]
    ChatCompletionChunk,
}
impl CreateChatCompletionStreamResponseObject {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::ChatCompletionChunk => "chat.completion.chunk",
        }
    }
}
impl ::std::fmt::Display for CreateChatCompletionStreamResponseObject {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for CreateChatCompletionStreamResponseObject {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CreateChatCompletionStreamResponseChoicesItem {
    pub delta: ChatCompletionStreamResponseDelta,
    ///The reason the model stopped generating tokens
    pub finish_reason: Option<CreateChatCompletionStreamResponseChoicesItemFinishReason>,
    ///The index of the choice in the list of choices
    pub index: i64,
    ///Log probability information for the choice
    #[serde(
        skip_serializing_if = "Option::is_none",
        default,
        deserialize_with = "tri_state_serde::deserialize"
    )]
    pub logprobs: Option<Option<CreateChatCompletionStreamResponseChoicesItemLogprobs>>,
}
///Log probability information for the choice
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CreateChatCompletionStreamResponseChoicesItemLogprobs {
    pub content: Option<Vec<ChatCompletionTokenLogprob>>,
    pub refusal: Option<Vec<ChatCompletionTokenLogprob>>,
}
///The reason the model stopped generating tokens
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum CreateChatCompletionStreamResponseChoicesItemFinishReason {
    #[default]
    #[serde(rename = "stop")]
    Stop,
    #[serde(rename = "length")]
    Length,
    #[serde(rename = "tool_calls")]
    ToolCalls,
    #[serde(rename = "content_filter")]
    ContentFilter,
    #[serde(rename = "function_call")]
    FunctionCall,
}
impl CreateChatCompletionStreamResponseChoicesItemFinishReason {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Stop => "stop",
            Self::Length => "length",
            Self::ToolCalls => "tool_calls",
            Self::ContentFilter => "content_filter",
            Self::FunctionCall => "function_call",
        }
    }
}
impl ::std::fmt::Display for CreateChatCompletionStreamResponseChoicesItemFinishReason {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for CreateChatCompletionStreamResponseChoicesItemFinishReason {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ChatCompletionTokenLogprob {
    pub bytes: Option<Vec<i64>>,
    pub logprob: f64,
    pub token: String,
}
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct ChatCompletionStreamResponseDelta {
    #[serde(
        skip_serializing_if = "Option::is_none",
        default,
        deserialize_with = "tri_state_serde::deserialize"
    )]
    pub content: Option<Option<String>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub role: Option<ChatCompletionStreamResponseDeltaRole>,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ChatCompletionStreamResponseDeltaRole {
    #[default]
    #[serde(rename = "developer")]
    Developer,
    #[serde(rename = "system")]
    System,
    #[serde(rename = "user")]
    User,
    #[serde(rename = "assistant")]
    Assistant,
    #[serde(rename = "tool")]
    Tool,
}
impl ChatCompletionStreamResponseDeltaRole {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Developer => "developer",
            Self::System => "system",
            Self::User => "user",
            Self::Assistant => "assistant",
            Self::Tool => "tool",
        }
    }
}
impl ::std::fmt::Display for ChatCompletionStreamResponseDeltaRole {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for ChatCompletionStreamResponseDeltaRole {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
