src/snapshots/openapi_to_rust__test_helpers__content_union_structured.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct InputMessage {
    pub content: InputMessageContent,
    pub role: String,
}
pub type InputMessageContentString = String;
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum InputMessageContent {
    InputMessageContentString(InputMessageContentString),
    ContentBlockArray(ContentBlockArray),
}
///Array variant in union
pub type ContentBlockArray = Vec<ContentBlock>;
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ContentBlock {
    pub text: String,
    pub r#type: String,
}
